[package]
name = "concave"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "^4.0"
async-stream = "^0.3"
async-trait = "^0.1"
config = { version = "^0.13", default-features = false, features = ["yaml"] }
env_logger = "^0.9"
humantime-serde = "^1.1"
futures = "^0.3"
lazy_static = "^1.4"
log = "^0.4"
prost = "^0.10"
regex = "^1.5"
serde_derive = "^1.0"
serde = "^1.0"
tempfile = "^3.3"
thiserror = "^1.0"
tokio = { version = "^1.17", features = ["rt-multi-thread", "fs", "macros", "io-util", "sync", "time"] }

[dev-dependencies]
ctor = "^0.1"

[build-dependencies]
prost-build = "^0.10"
