[package]
name = "concave"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "^4.0"
async-stream = "^0.3"
async-trait = "^0.1"
bincode = "^1.3"
bytes = "^1.1"
config = { version = "^0.13", default-features = false, features = ["yaml"] }
env_logger = "^0.9"
humantime-serde = "^1.1"
futures = "^0.3"
lazy_static = "^1.4"
log = "^0.4"
regex = "^1.5"
serde_derive = "^1.0"
serde = "^1.0"
structopt = "^0.3"
tempfile = "^3.3"
thiserror = "^1.0"
tokio = { version = "^1.17", features = ["rt-multi-thread", "fs", "macros", "io-util", "sync", "time"] }

[dev-dependencies]
anyhow = "^1.0"
ctor = "^0.1"
reqwest = { version = "^0.11", features = ["json"] }
uuid = { version = "^0.8", features = ["v4"] }
